--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^7.5.7",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -60,7 +61,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ts-node": "^8.3.0",
-    "typescript": "^5.3.2"
+    "typescript": "5.2.x"
   },
   "description": "An Ionic project"
 }
